--- a/src/index.css
+++ b/src/index.css
@@ -66,5 +66,31 @@ width: 2px;
 }
 
 .navigation{
-   margin-right: 2px;
+    padding-left: 0px;
+    height: 30px;
+    width: 280px;
+    border-radius: 50px;
+    text-align:center;
+   display: flex;
+   gap: 35px;
+   background-color: aqua;
+}
+.image{
+    margin-top: 10px;
+    width: 350px;
+    text-align: center;
+    padding-top: 0px;
+    border-radius: 40px;
+   
+}
+.PublicArticles{
+     margin-top: 10px;
+    text-align: center;
+    padding-top: 0px;
+    border-radius: 40px;
+margin-left: 100px;
+}
+
+.Articles{
+    box-shadow: 5px;
 }
