--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+/* 
 body{
     background-color:rgb(241, 239, 220);
 }
@@ -93,4 +95,4 @@ margin-left: 100px;
 
 .Articles{
     box-shadow: 5px;
-}
+} */ 
